mypy_output.txt
trading\production_health.py:721: error: Invalid syntax  [syntax]
                    if self._last_results.get(name)?.status != HealthStatu...
                                                    ^
